# trading-bot-mcp

./: .env.example  README.md  main_server.py  pyproject.toml  railway.toml  test_server.py
aggregator/: aggregator.py
alerts/: alert_engine.py  monitor.py
analysis_prompt/: analysis_prompts.py
config/: settings.py
copy_trade/: copy_trade_agent.py  wallet_watcher.py
events/: event_bus.py
models/: safety_schemas.py  schemas.py
resources/: live_resources.py
safety/: goplus.py  honeypot.py  rugcheck.py  scanner.py  tokensniffer.py
servers/: coingecko_server.py  defillama_server.py  dexscreener_server.py  whale_tracker_server.py
tests/: test_safety_and_events.py  test_servers.py
token_cache/: token_cache.py
utils/: http_client.py  ollama_client.py
