[project]
name = "defi-mcp"
version = "1.0.0"
description = "DeFi Data MCP Tool Server — Role 3: Data / MCP Tools Engineer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",          # official MCP SDK — includes FastMCP + CLI inspector
    "fastmcp>=2.0.0",            # standalone FastMCP (gofastmcp.com)
    "httpx>=0.27.0",             # async HTTP client (API calls)
    "pydantic>=2.0.0",           # data validation and schemas
    "pydantic-settings>=2.0.0",  # settings loaded from .env file
    "python-dotenv>=1.0.0",      # .env loader
    "apscheduler>=3.10.0",       # real-time polling scheduler
    "websockets>=12.0",          # WebSocket client (copy trade wallet watching)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",      # mock httpx calls in tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]
